# Music-Platform

./: .gitignore  RESULTS.md  celerybeat-schedule.dir  db.sqlite3  manage.py  pyproject.toml  pytest.ini
albums/: admin.py  filter.py  form.py  models.py  permissions.py  serializers.py  task.py  tests.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_album_album_approved.py  0003_remove_album_creation_date_album_created_and_more.py  0004_song.py  0005_song_album.py  0006_song_audio_alter_song_image.py
albums/templates/: CreateAlbum.html  about.html
albums/tests/: conftest.py  test_album.py  test_serializer.py
artists/: admin.py  form.py  models.py  serializers.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_artist_user.py
artists/templates/: ListArtist.html
artists/tests/: conftest.py  test_Artist_List.py
authentication/: serializers.py  urls.py  views.py
authentication/tests/: conftest.py  test_Login.py  test_logout.py  test_register.py
musicplatform/: celery.py  settings.py  urls.py
templates/registration/: login.html
users/: admin.py  form.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_bio.py
users/tests/: conftest.py  test_user_details.py
