[tool.poetry]
name = "musicplatform"
version = "0.1.0"
description = ""
authors = ["abdulrahman <abdelr7manfared@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
ipython = "^8.5.0"
django-model-utils = "^4.2.0"
django-bootstrap-datepicker-plus = "^4.0.0"
Pillow = "^9.2.0"
django-imagekit = "^4.1.0"
djangorestframework = "^3.14.0"
pytest = "^7.1.3"
pytest-django = "^4.5.2"
django-filter = "^22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
